--- a/Code/Demixing/Minicon Plots.ipynb
+++ b/Code/Demixing/Minicon Plots.ipynb
@@ -15164,7 +15164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -15189,7 +15189,38 @@
     "    nn_stats['mean'] = np.array(nn_stats['mean'])\n",
     "    nn_stats['bias'] = np.array(nn_stats['bias'])\n",
     "    nn_stats['var'] = np.array(nn_stats['var'])\n",
-    "    nn_stats['mse'][ind] = np.array(nn_stats['mse'])"
+    "    nn_stats['mse'] = np.array(nn_stats['mse'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2793.3683519  -2704.071912   -2613.47172465 ...,  -437.83128616\n",
+      "   -343.73613006  -240.47496604]\n",
+      " [-2693.65634854 -2599.9957897  -2501.81086697 ...,  -373.54169279\n",
+      "   -283.0424189   -182.11946861]\n",
+      " [-2747.69607594 -2659.29258448 -2562.21010553 ...,  -340.32906825\n",
+      "   -254.98544876  -147.33652028]\n",
+      " ..., \n",
+      " [-2677.96104396 -2599.13658585 -2515.65234086 ...,  -415.69931736\n",
+      "   -339.96809813  -232.70795022]\n",
+      " [-2607.94372172 -2522.29750089 -2441.78566426 ...,  -342.07018108\n",
+      "   -253.80151659  -169.42962974]\n",
+      " [-2724.43962748 -2650.96354048 -2574.23247206 ...,  -334.88909995\n",
+      "   -239.31521007  -151.41035056]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print nn_stats['bias']"
    ]
   },
   {
