--- a/Notes/Demixing/Divisive Normalization Notes 2.tex
+++ b/Notes/Demixing/Divisive Normalization Notes 2.tex
@@ -54,6 +54,12 @@ $\mathbf{r_\text{hid}} = \phi (\mathbf{W_{\text{hid}}r + b})$
 $\mathbf{r} = \text{Poisson} (g_1\mathbf{f} (s_1) + g_2\mathbf{f} (s_2))$
 \\
 \\
+$\hat{s_1}$
+\\
+\\
+$\hat{s_2}$
+\\
+\\
 $f_i(s)$ is tuning curve of neuron i\\
 Tuning curve assumptions:\\
 Tuning curves cover the space so $\sum_i f_i(s_j)$ is independent of $s_j$\\
