--- a/Code/Demixing/Demixing Minicon Plots and Code Part 4.ipynb
+++ b/Code/Demixing/Demixing Minicon Plots and Code Part 4.ipynb
@@ -260,59 +260,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def generate_testset_cat(ndata, stim_0, stim_1, c_0=4, c_1=1, r_max=1):\n",
-    "    numvec = np.random.binomial(1, .5, size=ndata).astype(int)\n",
-    "    s_0 = np.ones(ndata) * stim_0\n",
-    "    s_1 = np.ones(ndata) * stim_1\n",
-    "    r, numvec, s, c  = generate_popcode_data_cat(ndata, numvec, nneuron, sigtc_sq, c_50, r_max, \"poisson\", s_0, s_1, c_0, c_1)\n",
-    "    y = s.T[0]\n",
-    "    return r, y, s, c, numvec "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333 -0.33333333\n",
-      " -0.33333333 -0.33333333 -0.33333333 -0.33333333]\n"
-     ]
-    }
-   ],
-   "source": [
-    "r, y, s, c, numvec = generate_testset_cat(100, -30, 0, c_0=4, c_1=1, r_max=1)\n",
-    "print y"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -346,19 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yes!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import demixing as dm\n",
     "td = dm.generate_trainset_cat(27000, c_0=4, c_1=1, r_max=1)\n",
@@ -368,31 +307,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "file_name = 'output_nn_runs_cat/nn_runs_cat_0.pkl'\n",
+    "import pickle\n",
+    "#file_name = 'output_nn_runs_cat/nn_runs_cat_1.pkl'\n",
+    "file_name = 'nn_runs_cat_1.pkl'\n",
     "pkl_file = open(file_name, 'rb')\n",
-    "nn, nnx, valid_mse, stats = pickle.load(pkl_file)\n",
-    "\"\"\"\n",
-    "test_data = dm.generate_testset_cat(4500, -10, -30, c_0=4, c_1=1, r_max=1)\n",
+    "nn, nnx, valid_mse, stats = pickle.load(pkl_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "test_data = dm.generate_testset_cat(4500, -0, -30, c_0=4, c_1=1, r_max=1)\n",
     "nn_preds, true = dm.test_nn(nn, nnx, test_data)\n",
     "#nn_preds = nn_preds.T * 90"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.01418736  0.00887847  0.0176113  ...,  0.00862302  0.01710742\n",
+      "  0.03765172]\n"
+     ]
+    }
+   ],
    "source": [
-    "r, y, _, _, _ = td"
+    "print nn_preds"
    ]
   },
   {
